# qtpyinheritance

./: .flake8  .gitattributes  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  dev-requirements.txt  index.html  pyproject.toml  requirements.txt  run_tests.py  setup.cfg  setup.py  versions.json
.github/workflows/: standard.yml
conda-recipe/: meta.yaml
docs/source/: conf.py  index.rst
master/: .buildinfo  genindex.html  index.html
qtpyinheritance/: __init__.py  _version.py  properties.py  signals.py
qtpyinheritance/tests/: test_properties.py  test_signals.py
v0.0.3/: objects.inv  search.html  searchindex.js
